--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ li > label {
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
     width: 226px
 }
 button.delete img {
@@ -132,18 +132,18 @@ button.delete img:hover {
 
 /* Completed */
 #completed-tasks label {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-    display:none
+    display:none;
 }
 
 ul li.editMode input[type=text] {
     display:inline-block;
-    width:224px
+    width:224px;
 }
 
 ul li.editMode label {
